--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,11 +10,11 @@
 
     <error-page>
         <error-code>403</error-code>
-        <location>/WEB-INF/views/error403.jsp</location>
+        <location>/error</location>
     </error-page>
 
     <error-page>
         <error-code>404</error-code>
-        <location>/WEB-INF/views/error404.jsp</location>
+        <location>/error</location>
     </error-page>
 </web-app>
