Подключил базу данных. Создал сущности "Invoice" и "Category". Категории связаны с товарами в отношении один ко многим. Заказы пока не связаны

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>product-list.xhtml</welcome-file>
+        <welcome-file>category-list.xhtml</welcome-file>
     </welcome-file-list>
 
     <error-page>
